--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
 <img style="width: 32%;" src="image3.jpg">
 <h1 style="font-size:50px;text-align:center;"> Scooping Joy </h1>
 
+<div style="text-align:center;">
+
 <video src="video/video1.mp4" controls />
+
 </div>
