--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <div style="text-align:center;">
 
-<video src="video/video1.mp4" controls />
+<video src="video/video1.MP4" controls />
 
 </div>
+
